# sign_of_human_activity

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/sha/: sha.h
devel/include/yolact_ros/: YolactConfig.h
devel/include/yolact_ros_msgs/: Box.h  Detection.h  Detections.h  Mask.h
devel/lib/pkgconfig/: bir08_jackal.pc  cv_bridge.pc  env_complexity.pc  fath_pivot_mount_description.pc  image_geometry.pc  opencv_tests.pc  sha.pc  sha_demo.pc  velodyne_description.pc  velodyne_gazebo_plugins.pc  yolact_ros.pc  yolact_ros_msgs.pc
devel/share/bir08_jackal/cmake/: bir08_jackalConfig.cmake
devel/share/cv_bridge/cmake/: cv_bridgeConfig.cmake
devel/share/env_complexity/cmake/: env_complexityConfig.cmake
devel/share/fath_pivot_mount_description/cmake/: fath_pivot_mount_descriptionConfig.cmake
devel/share/opencv_tests/cmake/: opencv_testsConfig.cmake
src/env_complexity/: CMakeLists.txt
src/env_complexity/src/: env_complexity.cpp
src/fuzzylite-6.0/QtFuzzyLite/: SHA.fll  SHA2.fll  SHA3.fll
src/sha/: CMakeLists.txt
src/sha/msg/: sha.msg
src/sha/src/: fuzzy_eva.py  fuzzytest copy.h  fuzzytest fuzzy.cpp  fuzzytest original.cpp  sha.cpp  test.txt
src/sha/src/exp_data/: experiment_2obj.csv  experiment_best_1.csv  experiment_best_2.csv  experiment_best_3.csv
src/sha/src/exp_data/archive/: detection2.csv  detection_2817.csv  detection_best_1.csv  detection_best_2.csv  detection_best_3.csv  experiment_1bk.csv  experiment_2817.csv  experiment_2bk.csv  experiment_3bk.csv  experiment_bk.csv
src/sha_demo/: CMakeLists.txt  sha.launch  yolact.rviz
(+40 files in other folders)
